--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-portfolio",
+  "name": "bambang-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://B-smd.github.io/my-portfolio",
+  "homepage": "https://B-smd.github.io/bambang-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
